--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.gerrytan.pizzashop</groupId>
+  <groupId>com.balero</groupId>
   <artifactId>balerocms-enterprise</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
@@ -101,6 +101,30 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+        <!-- Executable JAR File
+        Thanks to this post!
+        nurkiewicz.com/2012/11/standalone-web
+        -application-with.html
+        -->
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.0</version>
+            <executions>
+                <execution>
+                    <id>tomcat-run</id>
+                    <goals>
+                        <goal>exec-war-only</goal>
+                    </goals>
+                    <phase>package</phase>
+                    <configuration>
+                        <path>/</path>
+                        <enableNaming>false</enableNaming>
+                        <finalName>standalone.jar</finalName>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
