Media directory fix

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,9 @@
                         <path>/</path>
                         <enableNaming>false</enableNaming>
                         <finalName>standalone.jar</finalName>
+                        <!--
+                        <serverXml>src/main/tomcatconf/server.xml</serverXml>
+                        -->
                     </configuration>
                 </execution>
             </executions>
