--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
           <artifactId>jsp-api</artifactId>
           <version>2.1</version>
       </dependency>
+
+      <!-- Log4j -->
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.16</version>
+      </dependency>
     
   </dependencies>
   
